--- a/.github/workflows/chaining-jobs.yml
+++ b/.github/workflows/chaining-jobs.yml
@@ -22,7 +22,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Output for Job 1
-        run: echo "Hello from Job 1. Run Job 3 equals ${{ github.event.inputs.run-job-3 }}"
+      #  run: echo "Hello from Job 1. Run Job 3 equals ${{ github.event.inputs.run-job-3 }}"
         run: echo "My name is Jeff equals ${{ github.event.inputs.My Name is Jeff }}"
 
   job-2:
